# shiny-invention

./: .env.example  .gitignore  AGENTS.md  BACKEND_ARCHITECTURE.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  REQLENS_PRESENTER_NOTES.md  SWEEP_04f785b4_ANALYSIS.md  docker-compose.yml  output.md  paper_results_presentation.md
IEEE-conference-template-062824/: IEEE-conference-template-062824.tex  README.md  paper.tex
backend/: .gitignore  manage.py  pick_free_port.py  pyproject.toml
backend/acp_client/: permissions.py  registry.py  runner.py
backend/acp_client/cursor_sdk/: package-lock.json  package.json  runner.mjs
backend/core/: admin.py  apps.py  background.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/core/management/commands/: seed_benchmark.py
backend/core/migrations/: 0001_initial.py  0002_agent_model_selection.py  0003_stageexecution_raw_updates.py  0004_reasoning_baseline_bgtask.py
backend/eval/: direct_baseline.py  metrics.py  runner.py  stats.py
backend/pipeline/: context_modes.py  contracts.py  few_shot_examples.py  orchestrator.py  prompts.py  retrieval.py
backend/pipeline/stages/: __init__.py  analyze.py  base.py  critique.py  generate.py  map_stage.py  parse.py  trace.py
backend/reqlens/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: test_acp_registry.py  test_context_and_prompts.py  test_contracts.py  test_eval.py  test_phase_hardening.py  test_pipeline_runtime.py  test_retrieval.py
docs/: ARCHITECTURE.md  DECISIONS.md  README.md  generate_charts.py  slides.md
frontend/: next.config.ts  (+4 more)
(+36 files in other folders)
