[project]
name = "reqlens-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.6",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "watchdog>=6.0",
    "faiss-cpu>=1.9",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.3",
    "numpy>=2.1",
    "pandas>=2.2",
    "scipy>=1.14",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "markdown-it-py>=3.0",
    "rich>=13.9",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-django>=4.9",
    "django-stubs>=5.1",
    "djangorestframework-stubs>=3.15",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "reqlens.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "reqlens.settings"
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["core", "pipeline", "eval", "acp_client"]
python_files = ["test_*.py", "tests.py"]
